[package]
authors = ["Owen Sanchez <pengowen816@gmail.com>"]
name = "goal"
version = "1.0.1"
license = "MIT/Apache-2.0"
description = "Conveniently store a note for remembering things"
repository = "https://github.com/pengowen123/goal"
readme = "README.md"

[dependencies]
app_dirs = "1.1.1"
inner = "0.1.1"
open = "1.1.1"
tempdir = "0.3.5"
toml = "0.5.0"

[dependencies.clap]
version = "4.0.15"
features = ["derive", "cargo"]
